refactor: Some aspects of the code has been refactored. The agent_manager management has been refactored. The load_agent function has been updated. The save_agents function has been updated.

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -72,9 +72,9 @@
     "    def add_agent(self, agent_type, agent_name):\n",
     "        \"\"\"Añade un nuevo agente al sistema.\"\"\"\n",
     "        if isinstance(agent_type, type) and agent_type == Client: \n",
-    "            agents[agent_name] = Client(agent_name)\n",
+    "            agents[agent_name] = Client(agent_name, self)\n",
     "        elif isinstance(agent_type, type) and agent_type == School:\n",
-    "            agents[agent_name] = School(agent_name)\n",
+    "            agents[agent_name] = School(agent_name, self)\n",
     "        else:\n",
     "            print(f\"Invalid agent type: {agent_type}. Please use valid agent.\")\n",
     "            return\n",
@@ -102,92 +102,98 @@
     "                print(agent.describe())     \n",
     "    \n",
     "    def load_agents_from_file(self, file_path):\n",
-    "        \"\"\"Carga agentes desde un fichero JSON (con Exams como array de objetos).\"\"\"\n",
-    "\n",
+    "        \"\"\"Carga agentes desde un fichero JSON, incluyendo colas de inscripción y otros datos relevantes.\"\"\"\n",
     "        import json\n",
+    "        global agents  # Asegurarse de usar el diccionario global\n",
+    "\n",
     "        try:\n",
     "            with open(file_path, 'r') as file:\n",
     "                data = json.load(file)\n",
     "\n",
-    "            # Load schools\n",
+    "            # Cargar escuelas\n",
     "            for school_name, school_data in data.get(\"schools\", {}).items():\n",
     "                self.add_agent(School, school_name)\n",
     "                school = self.get_agent_by_name(school_name, School)\n",
-    "                school.students = school_data.get(\"students\", [])\n",
-    "                school.courses = []  # Initialize courses list for the school\n",
+    "                school.students = school_data.get(\"students\", {})\n",
+    "                school.is_open = school_data.get(\"is_open\", False)  # Restaurar el estado de apertura\n",
+    "                school.courses = {}  # Inicializar cursos como un diccionario\n",
     "                for course_name, course_info in school_data.get(\"courses\", {}).items():\n",
     "                    course = Course(name=course_name)\n",
     "                    course.students = course_info.get(\"students\", [])\n",
-    "                    course.exams = [] # Initialize exams list for the course\n",
-    "                    # Load exams as objects\n",
+    "                    course.exams = {}  # Inicializar exámenes como un diccionario\n",
+    "                    # Cargar exámenes como objetos\n",
     "                    exams_data = course_info.get(\"exams\", {})\n",
     "                    for exam_name, exam_details in exams_data.items():\n",
     "                        exam = Exam(exam_name)\n",
     "                        exam.exams_student = exam_details.get(\"exams_student\", {})\n",
-    "                        course.exams.append(exam)\n",
-    "                    school.courses.append(course)\n",
+    "                        course.exams[exam_name] = exam\n",
+    "                    # Restaurar la cola de inscripción\n",
+    "                    course.enrollment_queue.queue = course_info.get(\"enrollment_queue\", [])\n",
+    "                    school.courses[course_name] = course\n",
     "\n",
-    "            # Load clients\n",
+    "            # Cargar clientes\n",
     "            for client_name, client_data in data.get(\"clients\", {}).items():\n",
     "                self.add_agent(Client, client_name)\n",
     "                client = self.get_agent_by_name(client_name, Client)\n",
     "                enrolled_school = client_data.get(\"enrolled_school\")\n",
     "                if enrolled_school:\n",
     "                    client.school_stack.push(enrolled_school)\n",
+    "                # Restaurar toda la pila de escuelas\n",
+    "                client.school_stack.stack = client_data.get(\"school_stack\", [])\n",
     "\n",
-    "            print(f\"--- Agents loaded successfully from {file_path}. --- \")\n",
+    "            print(f\"--- Agents loaded successfully from {file_path}. ---\")\n",
     "        except FileNotFoundError:\n",
     "            print(f\"Error: File '{file_path}' not found.\")\n",
     "        except json.JSONDecodeError:\n",
     "            print(f\"Error: File '{file_path}' is not a valid JSON file.\")\n",
     "        except Exception as e:\n",
     "            print(f\"An error occurred while loading agents: {e}\")\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    def save_agents_to_file(self, file_path):\n",
-    "            \"\"\"Guarda los agentes en un fichero JSON (con Exams como array de objetos).\"\"\"\n",
-    "            import json\n",
-    "            data = {\n",
-    "                \"schools\": {},\n",
-    "                \"clients\": {}\n",
+    "        \"\"\"Guarda los agentes en un fichero JSON, incluyendo colas de inscripción y otros datos relevantes.\"\"\"\n",
+    "        import json\n",
+    "        global agents  # Asegurarse de usar el diccionario global\n",
+    "\n",
+    "        data = {\n",
+    "            \"schools\": {},\n",
+    "            \"clients\": {}\n",
+    "        }\n",
+    "\n",
+    "        # Guardar escuelas\n",
+    "        for school in self.filter_agents(School).values():\n",
+    "            courses_data = {}\n",
+    "            for course in school.courses.values():\n",
+    "                exams_data = {}\n",
+    "                for exam in course.exams.values():\n",
+    "                    exams_data[exam.name] = {\n",
+    "                        \"name\": exam.name,\n",
+    "                        \"exams_student\": exam.exams_student\n",
+    "                    }\n",
+    "                courses_data[course.name] = {\n",
+    "                    \"name\": course.name,\n",
+    "                    \"students\": course.students,\n",
+    "                    \"exams\": exams_data,\n",
+    "                    \"enrollment_queue\": course.enrollment_queue.queue  # Guardar la cola de inscripción\n",
+    "                }\n",
+    "            data[\"schools\"][school.name] = {\n",
+    "                \"students\": school.students,\n",
+    "                \"courses\": courses_data,\n",
+    "                \"is_open\": school.is_open  # Guardar el estado de apertura de la escuela\n",
     "            }\n",
     "\n",
-    "            # Guardar schools\n",
-    "            for school in self.filter_agents(School).values():\n",
-    "                courses_data = {}\n",
-    "                for course in school.courses:\n",
-    "                    exams_data = {}\n",
-    "                    exams_student = {}\n",
-    "                    \n",
-    "                    for exam in course.exams:  \n",
-    "                        for student, value in exam.exams_student.items():\n",
-    "                            exams_student[student] = value\n",
-    "                        exams_data[exam.name] = {\n",
-    "                            \"name\": exam.name,\n",
-    "                            \"exams_student\": exams_student\n",
-    "                        }\n",
-    "                    courses_data[course.name] = {\n",
-    "                        \"name\": course.name,\n",
-    "                        \"students\": course.students,\n",
-    "                        \"exams\": exams_data\n",
-    "                    }\n",
-    "                data[\"schools\"][school.name] = {\n",
-    "                    \"students\": school.students,\n",
-    "                    \"courses\": courses_data\n",
-    "                }\n",
+    "        # Guardar clientes\n",
+    "        for client in self.filter_agents(Client).values():\n",
+    "            data[\"clients\"][client.name] = {\n",
+    "                \"enrolled_school\": client.school_stack.peek(),\n",
+    "                \"school_stack\": client.school_stack.stack  # Guardar toda la pila de escuelas\n",
+    "            }\n",
     "\n",
-    "            # Guardar clients\n",
-    "            for client in self.filter_agents(Client).values():\n",
-    "                data[\"clients\"][client.name] = {\n",
-    "                    \"enrolled_school\": client.school_stack.peek()\n",
-    "                }\n",
-    "\n",
-    "            try:\n",
-    "                with open(file_path, 'w') as file:\n",
-    "                    json.dump(data, file, indent=4)\n",
-    "                print(f\"--- Agents saved successfully to {file_path}. --- \")\n",
-    "            except Exception as e:\n",
-    "                print(f\"An error occurred while saving agents: {e}\")"
+    "        try:\n",
+    "            with open(file_path, 'w') as file:\n",
+    "                json.dump(data, file, indent=4)\n",
+    "            print(f\"--- Agents saved successfully to {file_path}. ---\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"An error occurred while saving agents: {e}\")"
    ]
   },
   {
@@ -200,24 +206,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Client(Agent):\n",
     "    \"\"\"Clase que representa a un cliente que interactúa con el colegio.\"\"\"\n",
-    "    def __init__(self, name):\n",
+    "    def __init__(self, name, agent_manager):\n",
     "        super().__init__(name)\n",
     "        self.school_stack = Stack()\n",
-    "        self.agent_manager = AgentManager() \n",
+    "        self.agent_manager = agent_manager\n",
     "    \n",
     "    HELP_MESSAGES = {\n",
     "        \"client add_client <client_name>\": \"Add a client (student) to the system.\",\n",
     "        \"client enroll_in_school <client_name> <school_name>\": \"Enroll a client in an specific school.\",\n",
     "        \"client leave_school <client_name>\": \"Allow a client to leave school.\",\n",
     "        \"client join_enrollment_queue <client_name> <school_name> <course_name>\": \"Join a client in a queue to enroll a course.\",\n",
-    "        # \"client assist_course <school_name> <couser_name>\": \"Assist a course in a school.\",\n",
+    "        \"client assist_course <school_name> <couser_name>\": \"Assist a course in a school.\",\n",
     "        \"client show_list\": \"Show the list of clients in the system.\",\n",
     "        \"client take_exam <client_name> <course_name> <exam_name>\": \"Allow a student to take an exam of a enrolled course.\",\n",
     "        \"client remove_client <client_name>\": \"Removes the client from the agents.\",\n",
@@ -335,18 +341,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "class School(Agent):\n",
-    "    def __init__(self, name):\n",
+    "    def __init__(self, name, agent_manager):\n",
     "        super().__init__(name)\n",
     "        self.students = {}  \n",
     "        self.courses = {}\n",
     "        self.is_open = False \n",
-    "        self.agent_manager = AgentManager() \n",
+    "        self.agent_manager = agent_manager\n",
     "\n",
     "    HELP_MESSAGES = {\n",
     "        \"school add_school <school_name>\": \"Add a new school to the system.\",\n",
@@ -552,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -579,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "dc9bd098",
    "metadata": {},
    "outputs": [],
@@ -600,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -823,6 +829,7 @@
     "                    client = self.get_agent_or_error(client_name, Client, \"client_not_found\")\n",
     "                    if client:\n",
     "                        client.join_enrollment_queue(school_name, course_name)\n",
+    "                        \n",
     "            elif parts[1] == 'assist_course':\n",
     "                if self.validate_command(parts, 3, \"invalid_format\", \"client assist_course <course_name>\"):\n",
     "                    client_name, _, course_name = parts\n",
@@ -830,7 +837,6 @@
     "                if client:\n",
     "                    client.assist_course(course_name)\n",
     "\n",
-    "            \n",
     "            elif   parts[1] == 'show_list':\n",
     "                if self.validate_command(parts, 2, \"invalid_format\", \"client show_list\"):\n",
     "                    self.agent_manager.list_agents(Client)\n",
@@ -869,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -902,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -947,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -966,10 +972,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "788ad798",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting city simulation... Type 'q' to exit\n",
+      "School EOI added to the system.\n",
+      "Client Billy added to the system.\n",
+      "--- Agents loaded successfully from test/test_agents.json. ---\n",
+      "--- Agents saved successfully to agents.json. ---\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "if __name__ == \"__main__\":\n",
