fix(Client): The assist course command functionality has been updated

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
     "                print(agent.describe())     \n",
     "    \n",
     "    def load_agents_from_file(self, file_path):\n",
-    "        \"\"\"Carga agentes desde un fichero JSON, incluyendo colas de inscripción y otros datos relevantes.\"\"\"\n",
+    "        \"\"\"Carga agentes desde un fichero JSON, incluyendo colas de inscripción, asistencias y otros datos relevantes.\"\"\"\n",
     "        import json\n",
     "        global agents  # Asegurarse de usar el diccionario global\n",
     "\n",
@@ -121,6 +121,7 @@
     "                    course = Course(name=course_name)\n",
     "                    course.students = course_info.get(\"students\", [])\n",
     "                    course.exams = {}  # Inicializar exámenes como un diccionario\n",
+    "                    course.assists = course_info.get(\"assists\", {})  # Cargar asistencias\n",
     "                    # Cargar exámenes como objetos\n",
     "                    exams_data = course_info.get(\"exams\", {})\n",
     "                    for exam_name, exam_details in exams_data.items():\n",
@@ -150,7 +151,7 @@
     "            print(f\"An error occurred while loading agents: {e}\")\n",
     "\n",
     "    def save_agents_to_file(self, file_path):\n",
-    "        \"\"\"Guarda los agentes en un fichero JSON, incluyendo colas de inscripción y otros datos relevantes.\"\"\"\n",
+    "        \"\"\"Guarda los agentes en un fichero JSON, incluyendo colas de inscripción, asistencias y otros datos relevantes.\"\"\"\n",
     "        import json\n",
     "        global agents  # Asegurarse de usar el diccionario global\n",
     "\n",
@@ -173,7 +174,8 @@
     "                    \"name\": course.name,\n",
     "                    \"students\": course.students,\n",
     "                    \"exams\": exams_data,\n",
-    "                    \"enrollment_queue\": course.enrollment_queue.queue  # Guardar la cola de inscripción\n",
+    "                    \"enrollment_queue\": course.enrollment_queue.queue,\n",
+    "                    \"assists\": course.assists  # Guardar asistencias\n",
     "                }\n",
     "            data[\"schools\"][school.name] = {\n",
     "                \"students\": school.students,\n",
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -223,7 +225,7 @@
     "        \"client enroll_in_school <client_name> <school_name>\": \"Enroll a client in an specific school.\",\n",
     "        \"client leave_school <client_name>\": \"Allow a client to leave school.\",\n",
     "        \"client join_enrollment_queue <client_name> <school_name> <course_name>\": \"Join a client in a queue to enroll a course.\",\n",
-    "        \"client assist_course <school_name> <couser_name>\": \"Assist a course in a school.\",\n",
+    "        \"client assist_course <client_name> <courser_name>\": \"Assist a course in a school.\",\n",
     "        \"client show_list\": \"Show the list of clients in the system.\",\n",
     "        \"client take_exam <client_name> <course_name> <exam_name>\": \"Allow a student to take an exam of a enrolled course.\",\n",
     "        \"client remove_client <client_name>\": \"Removes the client from the agents.\",\n",
@@ -281,19 +283,29 @@
     "            print(f\"School '{school_name}' do not exist.\")\n",
     "    \n",
     "    def assist_course(self, course_name):\n",
-    "        school_name = self.school_stack.peek()\n",
-    "        school = self.agent_manager.get_agent_by_name(school_name, School)\n",
+    "        import datetime as dt\n",
+    "        \n",
+    "        if not self.school_stack.is_empty():\n",
+    "            school_name = self.school_stack.peek()\n",
+    "            school = self.agent_manager.get_agent_by_name(school_name, School)\n",
     "\n",
-    "        if school:\n",
-    "            course = school.getCourse(course_name)\n",
-    "            if course:\n",
-    "                if self.name in course.students:\n",
-    "                    print(f\"{self.name} is already enrolled in {course_name}.\")\n",
+    "            if school:\n",
+    "                course = school.getCourse(course_name)\n",
+    "                if course:\n",
+    "                    if self.name in course.students:\n",
+    "                        if self.name not in course.assists:\n",
+    "                            course.assists[self.name] = [str(dt.datetime.now())]\n",
+    "                        else:\n",
+    "                            course.assists[self.name].append(str(dt.datetime.now()))\n",
+    "                        print(f\"The student '{self.name}' assist to {course_name}.\")\n",
+    "                    else:\n",
+    "                        print(f\"The student {self.name} is not enrolled in course {course_name}.\")\n",
     "                else:\n",
-    "                    course.students.append(self.name)\n",
-    "                    print(f\"{self.name} is now enrolled in {course_name}.\")\n",
+    "                    print(f\"{course_name} is not available in {school_name}.\")\n",
     "            else:\n",
-    "                print(f\"{course_name} is not available in {school_name}.\")\n",
+    "                print(f\"School '{school_name}' do not exist.\")\n",
+    "        else:\n",
+    "            print(f\"The student '{self.name}' is not enrolled in any school.\")\n",
     "    \n",
     "    def take_exam(self, course_name, exam_name):\n",
     "        if not self.school_stack.is_empty():\n",
@@ -341,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -558,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -569,6 +581,7 @@
     "        self.students = []  \n",
     "        self.exams = {}\n",
     "        self.enrollment_queue = Queue()\n",
+    "        self.assists = {}\n",
     "    \n",
     "    def getExam(self, exam_name):\n",
     "        if exam_name in self.exams:\n",
@@ -585,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "dc9bd098",
    "metadata": {},
    "outputs": [],
@@ -606,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -831,8 +844,8 @@
     "                        client.join_enrollment_queue(school_name, course_name)\n",
     "                        \n",
     "            elif parts[1] == 'assist_course':\n",
-    "                if self.validate_command(parts, 3, \"invalid_format\", \"client assist_course <course_name>\"):\n",
-    "                    client_name, _, course_name = parts\n",
+    "                if self.validate_command(parts, 4, \"invalid_format\", \"client assist_course <client_name> <courser_name>\"):\n",
+    "                    _, _, client_name, course_name = parts\n",
     "                    client = self.get_agent_or_error(client_name, Client, \"client_not_found\")\n",
     "                if client:\n",
     "                    client.assist_course(course_name)\n",
@@ -875,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -908,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -953,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -972,22 +985,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "788ad798",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting city simulation... Type 'q' to exit\n",
-      "School EOI added to the system.\n",
-      "Client Billy added to the system.\n",
-      "--- Agents loaded successfully from test/test_agents.json. ---\n",
-      "--- Agents saved successfully to agents.json. ---\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "if __name__ == \"__main__\":\n",
