fix(City Simulation): An issue with the command processing has been fixed.

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "dc9bd098",
    "metadata": {},
    "outputs": [],
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -708,7 +708,11 @@
     "                self.agent_manager.save_agents_to_file(file_path)\n",
     "                \n",
     "        elif cmd == 'school':\n",
-    "            if parts[1] == 'add_school':\n",
+    "            if len(parts) < 2: \n",
+    "                print(self.ERROR_MESSAGES[\"invalid_format\"])\n",
+    "                self.help_school()\n",
+    "                \n",
+    "            elif parts[1] == 'add_school':\n",
     "                if self.validate_command(parts, 3, \"invalid_format\", \"school add_school <school_name>\"):\n",
     "                    _, _, school_name = parts\n",
     "                    school = self.get_agent_or_error(school_name, School, \"\")\n",
@@ -811,7 +815,11 @@
     "                self.help_school()\n",
     "                \n",
     "        elif cmd == 'client':\n",
-    "            if   parts[1] == 'add_client':\n",
+    "            if len(parts) < 2: \n",
+    "                print(self.ERROR_MESSAGES[\"invalid_format\"])\n",
+    "                self.help_client()\n",
+    "                \n",
+    "            elif  parts[1] == 'add_client':\n",
     "                if self.validate_command(parts, 3, \"invalid_format\", \"client add_client <client_name>\"):\n",
     "                    _, _, client_name = parts\n",
     "                    client = self.get_agent_or_error(client_name, Client, \"\")\n",
@@ -888,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -921,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -966,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -985,10 +993,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "788ad798",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting city simulation... Type 'q' to exit\n",
+      "Error: Invalid command format. Use '{expected_format}'.\n",
+      "Available commands for school:\n",
+      "-school add_school <school_name>: Add a new school to the system.\n",
+      "-school create_course <course_name> <school_name>: Create a new course at school.\n",
+      "-school show_students <school_name>: Show the list of all students registered at school.\n",
+      "-school show_enrollment_queue <school_name> <course_name>: Show the enrollment queue for the course.\n",
+      "-school admit_student_from_queue <school_name> <course_name>: Admit the next student from the queue to enroll in to a course.\n",
+      "-school show_courses <school_name>: Show the available courses at school.\n",
+      "-school remove_student <school_name> <client_name>: Remove a student from school.\n",
+      "-school show_list: Show the list of schools in the system\n",
+      "-school close / open <schol_name>: Open / close school, if there isn't students at class\n",
+      "-school add_exam_to_course <school_name> <course_name> <exam_name>: Add an exam to a specific course at school.\n",
+      "-school grade_exam <school_name> <course_name> <client_name> <exam_name> <grade>: Grade an exam that the client has taken in a course.\n",
+      "-school remove_exam_from_course <school_name> <course_name> <exam_name>: Remove an exam from a course if no client has submitted it.\n",
+      "-school show_exams <school_name> <course_name>: Show the list of exams available for a course at the school.\n",
+      "-school remove_school <school_name>: Removes the school from the agents.\n",
+      "-quit: q: Exit the simulation.\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "if __name__ == \"__main__\":\n",
