--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "id": "dc9bd098",
    "metadata": {},
    "outputs": [],
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "id": "788ad798",
    "metadata": {},
    "outputs": [
@@ -1002,23 +1002,12 @@
      "output_type": "stream",
      "text": [
       "Starting city simulation... Type 'q' to exit\n",
-      "Error: Invalid command format. Use '{expected_format}'.\n",
-      "Available commands for school:\n",
-      "-school add_school <school_name>: Add a new school to the system.\n",
-      "-school create_course <course_name> <school_name>: Create a new course at school.\n",
-      "-school show_students <school_name>: Show the list of all students registered at school.\n",
-      "-school show_enrollment_queue <school_name> <course_name>: Show the enrollment queue for the course.\n",
-      "-school admit_student_from_queue <school_name> <course_name>: Admit the next student from the queue to enroll in to a course.\n",
-      "-school show_courses <school_name>: Show the available courses at school.\n",
-      "-school remove_student <school_name> <client_name>: Remove a student from school.\n",
-      "-school show_list: Show the list of schools in the system\n",
-      "-school close / open <schol_name>: Open / close school, if there isn't students at class\n",
-      "-school add_exam_to_course <school_name> <course_name> <exam_name>: Add an exam to a specific course at school.\n",
-      "-school grade_exam <school_name> <course_name> <client_name> <exam_name> <grade>: Grade an exam that the client has taken in a course.\n",
-      "-school remove_exam_from_course <school_name> <course_name> <exam_name>: Remove an exam from a course if no client has submitted it.\n",
-      "-school show_exams <school_name> <course_name>: Show the list of exams available for a course at the school.\n",
-      "-school remove_school <school_name>: Removes the school from the agents.\n",
-      "-quit: q: Exit the simulation.\n"
+      "School EOI added to the system.\n",
+      "Client Billy added to the system.\n",
+      "Client Alice added to the system.\n",
+      "Client Carlos added to the system.\n",
+      "--- Agents loaded successfully from agents.json. ---\n",
+      "--- Agents saved successfully to agents.json. ---\n"
      ]
     }
    ],
