--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "a79a183d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# SIC_Capstone_School"
    ]
@@ -20,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -39,14 +41,16 @@
   {
    "cell_type": "markdown",
    "id": "453c0284",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Agent Manager"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -201,14 +205,16 @@
   {
    "cell_type": "markdown",
    "id": "9450e892",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Client"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -346,14 +352,16 @@
   {
    "cell_type": "markdown",
    "id": "d9b090a9",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## School"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -563,14 +571,16 @@
   {
    "cell_type": "markdown",
    "id": "54a23302",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Course"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -591,14 +601,16 @@
   {
    "cell_type": "markdown",
    "id": "9022775f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Exam"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "id": "dc9bd098",
    "metadata": {},
    "outputs": [],
@@ -612,14 +624,16 @@
   {
    "cell_type": "markdown",
    "id": "6b99d400",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## City Simulation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -896,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -922,14 +936,16 @@
   {
    "cell_type": "markdown",
    "id": "abdddcd9",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Queue"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -965,16 +981,14 @@
   {
    "cell_type": "markdown",
    "id": "71ece403",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## General agent dictionary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -988,12 +1002,12 @@
    "id": "f068aaa6",
    "metadata": {},
    "source": [
-    "## Main program"
+    "# Main program"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "788ad798",
    "metadata": {},
    "outputs": [
@@ -1001,13 +1015,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting city simulation... Type 'q' to exit\n",
-      "School EOI added to the system.\n",
-      "Client Billy added to the system.\n",
-      "Client Alice added to the system.\n",
-      "Client Carlos added to the system.\n",
-      "--- Agents loaded successfully from agents.json. ---\n",
-      "--- Agents saved successfully to agents.json. ---\n"
+      "Starting city simulation... Type 'q' to exit\n"
      ]
     }
    ],
@@ -1021,7 +1029,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SIC_Capstone_School",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1035,7 +1043,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
