--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -11,16 +11,14 @@
   {
    "cell_type": "markdown",
    "id": "cf7b4387",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Agent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -46,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -208,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -225,7 +223,7 @@
     "        \"client enroll_in_school <client_name> <school_name>\": \"Enroll a client in an specific school.\",\n",
     "        \"client leave_school <client_name>\": \"Allow a client to leave school.\",\n",
     "        \"client join_enrollment_queue <client_name> <school_name> <course_name>\": \"Join a client in a queue to enroll a course.\",\n",
-    "        \"client assist_course <client_name> <courser_name>\": \"Assist a course in a school.\",\n",
+    "        \"client assist_course <client_name> <course_name>\": \"Assist a course in a school.\",\n",
     "        \"client show_list\": \"Show the list of clients in the system.\",\n",
     "        \"client take_exam <client_name> <course_name> <exam_name>\": \"Allow a student to take an exam of a enrolled course.\",\n",
     "        \"client remove_client <client_name>\": \"Removes the client from the agents.\",\n",
@@ -353,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -570,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -598,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 47,
    "id": "dc9bd098",
    "metadata": {},
    "outputs": [],
@@ -619,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -852,11 +850,11 @@
     "                        client.join_enrollment_queue(school_name, course_name)\n",
     "                        \n",
     "            elif parts[1] == 'assist_course':\n",
-    "                if self.validate_command(parts, 4, \"invalid_format\", \"client assist_course <client_name> <courser_name>\"):\n",
+    "                if self.validate_command(parts, 4, \"invalid_format\", \"client assist_course <client_name> <course_name>\"):\n",
     "                    _, _, client_name, course_name = parts\n",
     "                    client = self.get_agent_or_error(client_name, Client, \"client_not_found\")\n",
-    "                if client:\n",
-    "                    client.assist_course(course_name)\n",
+    "                    if client:\n",
+    "                        client.assist_course(course_name)\n",
     "\n",
     "            elif   parts[1] == 'show_list':\n",
     "                if self.validate_command(parts, 2, \"invalid_format\", \"client show_list\"):\n",
@@ -896,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -965,16 +963,14 @@
   {
    "cell_type": "markdown",
    "id": "71ece403",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## General agent dictionary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -993,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "id": "788ad798",
    "metadata": {},
    "outputs": [
@@ -1001,13 +997,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting city simulation... Type 'q' to exit\n",
-      "School EOI added to the system.\n",
-      "Client Billy added to the system.\n",
-      "Client Alice added to the system.\n",
-      "Client Carlos added to the system.\n",
-      "--- Agents loaded successfully from agents.json. ---\n",
-      "--- Agents saved successfully to agents.json. ---\n"
+      "Starting city simulation... Type 'q' to exit\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">  \n",
+      ">  \n",
+      ">  \n",
+      ">  \n",
+      ">  \n",
+      ">  \n",
+      ">  dsfdsfdfd\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unknown command. Type 'help' for a list of commands.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">  sdfds\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unknown command. Type 'help' for a list of commands.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">  client sdfd fdsf dsafds fad\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Invalid command format. Use '{expected_format}'.\n",
+      "Available commands for client:\n",
+      "-client add_client <client_name>: Add a client (student) to the system.\n",
+      "-client enroll_in_school <client_name> <school_name>: Enroll a client in an specific school.\n",
+      "-client leave_school <client_name>: Allow a client to leave school.\n",
+      "-client join_enrollment_queue <client_name> <school_name> <course_name>: Join a client in a queue to enroll a course.\n",
+      "-client assist_course <client_name> <courser_name>: Assist a course in a school.\n",
+      "-client show_list: Show the list of clients in the system.\n",
+      "-client take_exam <client_name> <course_name> <exam_name>: Allow a student to take an exam of a enrolled course.\n",
+      "-client remove_client <client_name>: Removes the client from the agents.\n",
+      "-quit: q: Exit the simulation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">  q\n"
      ]
     }
    ],
@@ -1021,9 +1076,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SIC_Capstone_School",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1035,7 +1090,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
