refactor(AgentManager): A Singleton pattern has been implemented.

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -48,35 +48,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
    "source": [
     "class AgentManager:\n",
     "    \"\"\"Clase base para gestionar la creación y eliminación de agentes.\"\"\"\n",
+    "    \n",
+    "    _instance = None  \n",
+    "\n",
+    "    def __new__(cls, *args, **kwargs):\n",
+    "        \"\"\"Controla la creación de una única instancia.\"\"\"\n",
+    "        if cls._instance is None:\n",
+    "            cls._instance = super(AgentManager, cls).__new__(cls, *args, **kwargs)\n",
+    "        return cls._instance\n",
+    "\n",
     "    def __init__(self):\n",
-    "        self.agents = {}\n",
-    "        \n",
-    "    def filter_agents(self,*agents_types):\n",
+    "        if not hasattr(self, 'agents'):  # Evita re-inicializar si ya existe\n",
+    "            self.agents = {}\n",
+    "\n",
+    "    def filter_agents(self, *agents_types):\n",
     "        \"\"\"Filtra agentes según los tipos proporcionados.\"\"\"\n",
     "        filtered_agents = {\n",
-    "            name: agent for name, agent in agents.items()\n",
-    "            if isinstance(agent, tuple(agents_types))  \n",
+    "            name: agent for name, agent in self.agents.items()\n",
+    "            if isinstance(agent, tuple(agents_types))\n",
     "        }\n",
     "        return filtered_agents\n",
-    "    \n",
+    "\n",
     "    def get_agent_by_name(self, agent_name, agent_type):\n",
     "        \"\"\"Devuelve el agente con el nombre dado y tipo específico, o None si no se encuentra.\"\"\"\n",
-    "        return next((agent for agent in agents.values() \n",
+    "        return next((agent for agent in self.agents.values()\n",
     "                     if isinstance(agent, agent_type) and agent.name == agent_name), None)\n",
     "\n",
     "    def add_agent(self, agent_type, agent_name):\n",
     "        \"\"\"Añade un nuevo agente al sistema.\"\"\"\n",
-    "        if isinstance(agent_type, type) and agent_type == Client: \n",
-    "            agents[agent_name] = Client(agent_name, self)\n",
+    "        if isinstance(agent_type, type) and agent_type == Client:\n",
+    "            self.agents[agent_name] = Client(agent_name)\n",
     "        elif isinstance(agent_type, type) and agent_type == School:\n",
-    "            agents[agent_name] = School(agent_name, self)\n",
+    "            self.agents[agent_name] = School(agent_name)\n",
     "        else:\n",
     "            print(f\"Invalid agent type: {agent_type}. Please use valid agent.\")\n",
     "            return\n",
@@ -85,8 +95,8 @@
     "\n",
     "    def remove_agent(self, agent_name):\n",
     "        \"\"\"Elimina un agente del sistema.\"\"\"\n",
-    "        if agent_name in agents:\n",
-    "            del agents[agent_name]\n",
+    "        if agent_name in self.agents:\n",
+    "            del self.agents[agent_name]\n",
     "            print(f'Agent {agent_name} removed from the system.')\n",
     "        else:\n",
     "            print(f'Agent {agent_name} not found.')\n",
@@ -100,8 +110,8 @@
     "                print(agent.describe())\n",
     "        else:\n",
     "            print(\"Current agents:\")\n",
-    "            for agent in agents.values():\n",
-    "                print(agent.describe())     \n",
+    "            for agent in self.agents.values():\n",
+    "                print(agent.describe())  \n",
     "    \n",
     "    def load_agents_from_file(self, file_path):\n",
     "        \"\"\"Carga agentes desde un fichero JSON, incluyendo colas de inscripción, asistencias y otros datos relevantes.\"\"\"\n",
@@ -212,17 +222,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Client(Agent):\n",
     "    \"\"\"Clase que representa a un cliente que interactúa con el colegio.\"\"\"\n",
-    "    def __init__(self, name, agent_manager):\n",
+    "    def __init__(self, name):\n",
     "        super().__init__(name)\n",
     "        self.school_stack = Stack()\n",
-    "        self.agent_manager = agent_manager\n",
+    "        self.agent_manager = AgentManager()  \n",
     "    \n",
     "    HELP_MESSAGES = {\n",
     "        \"client add_client <client_name>\": \"Add a client (student) to the system.\",\n",
@@ -359,18 +369,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "class School(Agent):\n",
-    "    def __init__(self, name, agent_manager):\n",
+    "    def __init__(self, name):\n",
     "        super().__init__(name)\n",
     "        self.students = {}  \n",
     "        self.courses = {}\n",
     "        self.is_open = False \n",
-    "        self.agent_manager = agent_manager\n",
+    "        self.agent_manager = AgentManager() \n",
     "\n",
     "    HELP_MESSAGES = {\n",
     "        \"school add_school <school_name>\": \"Add a new school to the system.\",\n",
@@ -578,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -608,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "dc9bd098",
    "metadata": {},
    "outputs": [],
@@ -631,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -908,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -943,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -986,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -1005,18 +1015,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "788ad798",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting city simulation... Type 'q' to exit\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "if __name__ == \"__main__\":\n",
@@ -1027,9 +1029,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "SIC_Capstone_School",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1041,7 +1043,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
