feat(agents.json): New agents has been added to agents.json file

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -13,7 +13,9 @@
   {
    "cell_type": "markdown",
    "id": "cf7b4387",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Agent"
    ]
@@ -989,7 +991,9 @@
   {
    "cell_type": "markdown",
    "id": "71ece403",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## General agent dictionary"
    ]
